crates/wac-parser/tests/resolution/fail/unknown-targets-path.wac
package test:comp targets test:comp/foo;
